<resources>
    <string name="app_name">eSzigReader</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_header">New MRTD</string>
    <string name="document_number">Document Number</string>
    <string name="exp_date">Expiration Date</string>
    <string name="date_of_birth">Date of Birth</string>

    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
</resources>
